create product docs
